# CHANGELOG

## [0.0.4] 2019-02-21

- Make the send_resolved = true also the default value for the prometheus alerting

## [0.0.3] 2019-02-21

- Disabled Default TLS by prometheus alerting (When uses localhost sendmail)

## [0.0.2] 2019-02-18

- Added the Prometheus output type
- Better Passphrase data resolve, make the application faster
- Added 10 Minutes cache time for the data from phabricator, this make the application faster for repetitive tasks
- Added the Prometheus alert system

## [0.0.1] 2017-11-06
- First working version